# ech-cpp-dev

./: .clang-format  .travis.yml  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  bench.hpp  consensus.cpp  consensus.hpp  main.cpp  signing.cpp  signing.hpp
src/: CMakeLists.txt
src/benchmark/: CMakeLists.txt
src/common/: CMakeLists.txt  address.hpp  block.cpp  block.hpp  block_header.cpp  block_header.hpp  coin_amount.cpp  coin_amount.hpp  color.cpp  color.hpp  deposit.cpp  deposit.hpp  deserializer.hpp  input.cpp  input.hpp  merkle.cpp  merkle.hpp  outpoint.cpp  outpoint.hpp  serializable.hpp  serializer.hpp  signature.hpp  sparse_merkle.cpp  sparse_merkle.hpp  state.hpp  tx.cpp  tx.hpp  txid.cpp  txid.hpp  txo.cpp  txo.hpp  uint.hpp  utxo.cpp  utxo.hpp  utxoid.cpp  utxoid.hpp
src/crypto/: CMakeLists.txt  address.cpp  address.hpp  byteset.cpp  byteset.hpp  digest.cpp  digest.hpp  keys.cpp  keys.hpp  signature.cpp  signature.hpp  signer.cpp  signer.hpp
src/echd/: CMakeLists.txt  consensus.cpp  consensus.hpp  db.cpp  foo.cpp  foo.hpp  main.cpp  main.hpp  mempool.cpp  mempool.hpp  rewind.cpp  rewind.hpp  state.cpp  state.hpp  transition.cpp  transition.hpp
src/echd/jsonrpc/: CMakeLists.txt  eth.json  eth_client.cpp  eth_client.hpp  eth_client_stub.hpp
test/: CMakeLists.txt  main.cpp
test/common/: block.cpp  block_header.cpp  color.cpp  deposit.cpp  input.cpp  merkle.cpp  outpoint.cpp  tx.cpp  txo.cpp  utxo.cpp  utxoid.cpp
test/crypto/: address.cpp  byteset.cpp  digest.cpp  keys.cpp  signature.cpp
test/echd/: consensus.cpp  state.cpp
test/echd/jsonrpc/: eth_client.cpp
